# paper-ai-summarizer

./: README.md  app.py  chat.py  pyproject.toml  settings.yaml
assets/: showcase.webm
tutorial/: tutorial.ipynb
